--- a/heroku.yml
+++ b/heroku.yml
@@ -9,4 +9,4 @@ release:
   command:
     - python manage.py collectstatic --noinput
 run:
-  web: gunicorn unnamed_project.wsgi
+  web: gunicorn wiki-website.wsgi
